test/readonly/fail/array19.v3
//@execute 0=42; 1=13; 2=14; 3=15; 4=16; 5=17; 6=18; 7=19; 8=20; 9=21; 10=22; 11=23; 12=24; 13=25; 14=4; 15=3; 16=6; 17=42 
var a: array<array<int>> = Array<Array<int>>.new(4);
var b: array<array<bool>> = Array<Array<bool>>.new(3);
var c: array<array<byte>> = Array<Array<byte>>.new(6);

def main(arg: int) -> int {
	if (arg == 1 && a[0] == null) return 13;
	if (arg == 2 && a[1] == null) return 14;
	if (arg == 3 && a[2] == null) return 15;
	if (arg == 4 && a[3] == null) return 16;

	if (arg == 5 && b[0] == null) return 17;
	if (arg == 6 && b[1] == null) return 18;
	if (arg == 7 && b[2] == null) return 19;

	if (arg == 8 && c[0] == null) return 20;
	if (arg == 9 && c[1] == null) return 21;
	if (arg == 10 && c[2] == null) return 22;
	if (arg == 11 && c[3] == null) return 23;
	if (arg == 12 && c[4] == null) return 24;
	if (arg == 13 && c[5] == null) return 25;

	if (arg == 14) return a.length;
	if (arg == 15) return b.length;
	if (arg == 16) return c.length;

	return 42;
}
